run `make protogen`
