# go/lib/api/api.pb.go
@@ -7,6 +7,7 @@
 package api_pb
 
 import (
+	blogs "/blogs"
 	rss_feed "/blogs/rss_feed"
 	empty "github.com/golang/protobuf/ptypes/empty"
 	_ "google.golang.org/genproto/googleapis/api/annotations"
@@ -32,70 +33,99 @@ var file_proto_api_proto_rawDesc = []byte{
 	0x6c, 0x65, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2f, 0x65, 0x6d, 0x70, 0x74,
 	0x79, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x1a, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x2f, 0x62,
 	0x6c, 0x6f, 0x67, 0x73, 0x2f, 0x72, 0x73, 0x73, 0x5f, 0x66, 0x65, 0x65, 0x64, 0x2e, 0x70, 0x72,
-	0x6f, 0x74, 0x6f, 0x32, 0xa3, 0x04, 0x0a, 0x13, 0x50, 0x6f, 0x72, 0x74, 0x66, 0x6f, 0x6c, 0x69,
-	0x6f, 0x42, 0x61, 0x63, 0x6b, 0x65, 0x6e, 0x64, 0x41, 0x70, 0x69, 0x12, 0x62, 0x0a, 0x0d, 0x43,
-	0x72, 0x65, 0x61, 0x74, 0x65, 0x52, 0x53, 0x53, 0x46, 0x65, 0x65, 0x64, 0x12, 0x25, 0x2e, 0x70,
-	0x6f, 0x72, 0x74, 0x66, 0x6f, 0x6c, 0x69, 0x6f, 0x2e, 0x62, 0x6c, 0x6f, 0x67, 0x73, 0x2e, 0x43,
-	0x72, 0x65, 0x61, 0x74, 0x65, 0x52, 0x53, 0x53, 0x46, 0x65, 0x65, 0x64, 0x52, 0x65, 0x71, 0x75,
-	0x65, 0x73, 0x74, 0x1a, 0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f,
-	0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x22, 0x12, 0x82, 0xd3, 0xe4,
-	0x93, 0x02, 0x0c, 0x22, 0x0a, 0x2f, 0x72, 0x73, 0x73, 0x5f, 0x66, 0x65, 0x65, 0x64, 0x73, 0x12,
-	0x69, 0x0a, 0x10, 0x42, 0x61, 0x74, 0x63, 0x68, 0x47, 0x65, 0x74, 0x52, 0x53, 0x53, 0x46, 0x65,
-	0x65, 0x64, 0x73, 0x12, 0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f,
-	0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x1a, 0x29, 0x2e, 0x70, 0x6f,
-	0x72, 0x74, 0x66, 0x6f, 0x6c, 0x69, 0x6f, 0x2e, 0x62, 0x6c, 0x6f, 0x67, 0x73, 0x2e, 0x42, 0x61,
-	0x74, 0x63, 0x68, 0x47, 0x65, 0x74, 0x52, 0x53, 0x53, 0x46, 0x65, 0x65, 0x64, 0x73, 0x52, 0x65,
-	0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x12, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0c, 0x12, 0x0a,
-	0x2f, 0x72, 0x73, 0x73, 0x5f, 0x66, 0x65, 0x65, 0x64, 0x73, 0x12, 0x6d, 0x0a, 0x0a, 0x47, 0x65,
-	0x74, 0x52, 0x53, 0x53, 0x46, 0x65, 0x65, 0x64, 0x12, 0x22, 0x2e, 0x70, 0x6f, 0x72, 0x74, 0x66,
-	0x6f, 0x6c, 0x69, 0x6f, 0x2e, 0x62, 0x6c, 0x6f, 0x67, 0x73, 0x2e, 0x47, 0x65, 0x74, 0x52, 0x53,
-	0x53, 0x46, 0x65, 0x65, 0x64, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x23, 0x2e, 0x70,
-	0x6f, 0x72, 0x74, 0x66, 0x6f, 0x6c, 0x69, 0x6f, 0x2e, 0x62, 0x6c, 0x6f, 0x67, 0x73, 0x2e, 0x47,
-	0x65, 0x74, 0x52, 0x53, 0x53, 0x46, 0x65, 0x65, 0x64, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73,
-	0x65, 0x22, 0x16, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x10, 0x12, 0x0e, 0x2f, 0x72, 0x73, 0x73, 0x5f,
-	0x66, 0x65, 0x65, 0x64, 0x2f, 0x7b, 0x69, 0x64, 0x7d, 0x12, 0x66, 0x0a, 0x0d, 0x55, 0x70, 0x64,
-	0x61, 0x74, 0x65, 0x52, 0x53, 0x53, 0x46, 0x65, 0x65, 0x64, 0x12, 0x25, 0x2e, 0x70, 0x6f, 0x72,
-	0x74, 0x66, 0x6f, 0x6c, 0x69, 0x6f, 0x2e, 0x62, 0x6c, 0x6f, 0x67, 0x73, 0x2e, 0x55, 0x70, 0x64,
-	0x61, 0x74, 0x65, 0x52, 0x53, 0x53, 0x46, 0x65, 0x65, 0x64, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73,
-	0x74, 0x1a, 0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f,
-	0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x22, 0x16, 0x82, 0xd3, 0xe4, 0x93, 0x02,
-	0x10, 0x1a, 0x0e, 0x2f, 0x72, 0x73, 0x73, 0x5f, 0x66, 0x65, 0x65, 0x64, 0x2f, 0x7b, 0x69, 0x64,
+	0x6f, 0x74, 0x6f, 0x1a, 0x16, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x2f, 0x62, 0x6c, 0x6f, 0x67, 0x73,
+	0x2f, 0x62, 0x6c, 0x6f, 0x67, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x32, 0xb8, 0x06, 0x0a, 0x13,
+	0x50, 0x6f, 0x72, 0x74, 0x66, 0x6f, 0x6c, 0x69, 0x6f, 0x42, 0x61, 0x63, 0x6b, 0x65, 0x6e, 0x64,
+	0x41, 0x70, 0x69, 0x12, 0x62, 0x0a, 0x0d, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x52, 0x53, 0x53,
+	0x46, 0x65, 0x65, 0x64, 0x12, 0x25, 0x2e, 0x70, 0x6f, 0x72, 0x74, 0x66, 0x6f, 0x6c, 0x69, 0x6f,
+	0x2e, 0x62, 0x6c, 0x6f, 0x67, 0x73, 0x2e, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x52, 0x53, 0x53,
+	0x46, 0x65, 0x65, 0x64, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x16, 0x2e, 0x67, 0x6f,
+	0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d,
+	0x70, 0x74, 0x79, 0x22, 0x12, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0c, 0x22, 0x0a, 0x2f, 0x72, 0x73,
+	0x73, 0x5f, 0x66, 0x65, 0x65, 0x64, 0x73, 0x12, 0x69, 0x0a, 0x10, 0x42, 0x61, 0x74, 0x63, 0x68,
+	0x47, 0x65, 0x74, 0x52, 0x53, 0x53, 0x46, 0x65, 0x65, 0x64, 0x73, 0x12, 0x16, 0x2e, 0x67, 0x6f,
+	0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d,
+	0x70, 0x74, 0x79, 0x1a, 0x29, 0x2e, 0x70, 0x6f, 0x72, 0x74, 0x66, 0x6f, 0x6c, 0x69, 0x6f, 0x2e,
+	0x62, 0x6c, 0x6f, 0x67, 0x73, 0x2e, 0x42, 0x61, 0x74, 0x63, 0x68, 0x47, 0x65, 0x74, 0x52, 0x53,
+	0x53, 0x46, 0x65, 0x65, 0x64, 0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x12,
+	0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0c, 0x12, 0x0a, 0x2f, 0x72, 0x73, 0x73, 0x5f, 0x66, 0x65, 0x65,
+	0x64, 0x73, 0x12, 0x6d, 0x0a, 0x0a, 0x47, 0x65, 0x74, 0x52, 0x53, 0x53, 0x46, 0x65, 0x65, 0x64,
+	0x12, 0x22, 0x2e, 0x70, 0x6f, 0x72, 0x74, 0x66, 0x6f, 0x6c, 0x69, 0x6f, 0x2e, 0x62, 0x6c, 0x6f,
+	0x67, 0x73, 0x2e, 0x47, 0x65, 0x74, 0x52, 0x53, 0x53, 0x46, 0x65, 0x65, 0x64, 0x52, 0x65, 0x71,
+	0x75, 0x65, 0x73, 0x74, 0x1a, 0x23, 0x2e, 0x70, 0x6f, 0x72, 0x74, 0x66, 0x6f, 0x6c, 0x69, 0x6f,
+	0x2e, 0x62, 0x6c, 0x6f, 0x67, 0x73, 0x2e, 0x47, 0x65, 0x74, 0x52, 0x53, 0x53, 0x46, 0x65, 0x65,
+	0x64, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x16, 0x82, 0xd3, 0xe4, 0x93, 0x02,
+	0x10, 0x12, 0x0e, 0x2f, 0x72, 0x73, 0x73, 0x5f, 0x66, 0x65, 0x65, 0x64, 0x2f, 0x7b, 0x69, 0x64,
 	0x7d, 0x12, 0x66, 0x0a, 0x0d, 0x44, 0x65, 0x6c, 0x65, 0x74, 0x65, 0x52, 0x53, 0x53, 0x46, 0x65,
 	0x65, 0x64, 0x12, 0x25, 0x2e, 0x70, 0x6f, 0x72, 0x74, 0x66, 0x6f, 0x6c, 0x69, 0x6f, 0x2e, 0x62,
 	0x6c, 0x6f, 0x67, 0x73, 0x2e, 0x44, 0x65, 0x6c, 0x65, 0x74, 0x65, 0x52, 0x53, 0x53, 0x46, 0x65,
 	0x65, 0x64, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67,
 	0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74,
 	0x79, 0x22, 0x16, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x10, 0x2a, 0x0e, 0x2f, 0x72, 0x73, 0x73, 0x5f,
-	0x66, 0x65, 0x65, 0x64, 0x2f, 0x7b, 0x69, 0x64, 0x7d, 0x42, 0x15, 0x5a, 0x0b, 0x2f, 0x61, 0x70,
-	0x69, 0x3b, 0x61, 0x70, 0x69, 0x5f, 0x70, 0x62, 0xea, 0x02, 0x05, 0x41, 0x70, 0x69, 0x50, 0x62,
-	0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x66, 0x65, 0x65, 0x64, 0x2f, 0x7b, 0x69, 0x64, 0x7d, 0x12, 0x58, 0x0a, 0x0a, 0x43, 0x72, 0x65,
+	0x61, 0x74, 0x65, 0x42, 0x6c, 0x6f, 0x67, 0x12, 0x22, 0x2e, 0x70, 0x6f, 0x72, 0x74, 0x66, 0x6f,
+	0x6c, 0x69, 0x6f, 0x2e, 0x62, 0x6c, 0x6f, 0x67, 0x73, 0x2e, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65,
+	0x42, 0x6c, 0x6f, 0x67, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x16, 0x2e, 0x67, 0x6f,
+	0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d,
+	0x70, 0x74, 0x79, 0x22, 0x0e, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x08, 0x22, 0x06, 0x2f, 0x62, 0x6c,
+	0x6f, 0x67, 0x73, 0x12, 0x5f, 0x0a, 0x0d, 0x42, 0x61, 0x74, 0x63, 0x68, 0x47, 0x65, 0x74, 0x42,
+	0x6c, 0x6f, 0x67, 0x73, 0x12, 0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72,
+	0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x1a, 0x26, 0x2e, 0x70,
+	0x6f, 0x72, 0x74, 0x66, 0x6f, 0x6c, 0x69, 0x6f, 0x2e, 0x62, 0x6c, 0x6f, 0x67, 0x73, 0x2e, 0x42,
+	0x61, 0x74, 0x63, 0x68, 0x47, 0x65, 0x74, 0x42, 0x6c, 0x6f, 0x67, 0x73, 0x52, 0x65, 0x73, 0x70,
+	0x6f, 0x6e, 0x73, 0x65, 0x22, 0x0e, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x08, 0x12, 0x06, 0x2f, 0x62,
+	0x6c, 0x6f, 0x67, 0x73, 0x12, 0x61, 0x0a, 0x07, 0x47, 0x65, 0x74, 0x42, 0x6c, 0x6f, 0x67, 0x12,
+	0x1f, 0x2e, 0x70, 0x6f, 0x72, 0x74, 0x66, 0x6f, 0x6c, 0x69, 0x6f, 0x2e, 0x62, 0x6c, 0x6f, 0x67,
+	0x73, 0x2e, 0x47, 0x65, 0x74, 0x42, 0x6c, 0x6f, 0x67, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74,
+	0x1a, 0x20, 0x2e, 0x70, 0x6f, 0x72, 0x74, 0x66, 0x6f, 0x6c, 0x69, 0x6f, 0x2e, 0x62, 0x6c, 0x6f,
+	0x67, 0x73, 0x2e, 0x47, 0x65, 0x74, 0x42, 0x6c, 0x6f, 0x67, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e,
+	0x73, 0x65, 0x22, 0x13, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0d, 0x12, 0x0b, 0x2f, 0x62, 0x6c, 0x6f,
+	0x67, 0x73, 0x2f, 0x7b, 0x69, 0x64, 0x7d, 0x12, 0x5d, 0x0a, 0x0a, 0x44, 0x65, 0x6c, 0x65, 0x74,
+	0x65, 0x42, 0x6c, 0x6f, 0x67, 0x12, 0x22, 0x2e, 0x70, 0x6f, 0x72, 0x74, 0x66, 0x6f, 0x6c, 0x69,
+	0x6f, 0x2e, 0x62, 0x6c, 0x6f, 0x67, 0x73, 0x2e, 0x44, 0x65, 0x6c, 0x65, 0x74, 0x65, 0x42, 0x6c,
+	0x6f, 0x67, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67,
+	0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74,
+	0x79, 0x22, 0x13, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0d, 0x2a, 0x0b, 0x2f, 0x62, 0x6c, 0x6f, 0x67,
+	0x73, 0x2f, 0x7b, 0x69, 0x64, 0x7d, 0x42, 0x15, 0x5a, 0x0b, 0x2f, 0x61, 0x70, 0x69, 0x3b, 0x61,
+	0x70, 0x69, 0x5f, 0x70, 0x62, 0xea, 0x02, 0x05, 0x41, 0x70, 0x69, 0x50, 0x62, 0x62, 0x06, 0x70,
+	0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var file_proto_api_proto_goTypes = []interface{}{
 	(*rss_feed.CreateRSSFeedRequest)(nil),     // 0: portfolio.blogs.CreateRSSFeedRequest
 	(*empty.Empty)(nil),                       // 1: google.protobuf.Empty
 	(*rss_feed.GetRSSFeedRequest)(nil),        // 2: portfolio.blogs.GetRSSFeedRequest
-	(*rss_feed.UpdateRSSFeedRequest)(nil),     // 3: portfolio.blogs.UpdateRSSFeedRequest
-	(*rss_feed.DeleteRSSFeedRequest)(nil),     // 4: portfolio.blogs.DeleteRSSFeedRequest
-	(*rss_feed.BatchGetRSSFeedsResponse)(nil), // 5: portfolio.blogs.BatchGetRSSFeedsResponse
-	(*rss_feed.GetRSSFeedResponse)(nil),       // 6: portfolio.blogs.GetRSSFeedResponse
+	(*rss_feed.DeleteRSSFeedRequest)(nil),     // 3: portfolio.blogs.DeleteRSSFeedRequest
+	(*blogs.CreateBlogRequest)(nil),           // 4: portfolio.blogs.CreateBlogRequest
+	(*blogs.GetBlogRequest)(nil),              // 5: portfolio.blogs.GetBlogRequest
+	(*blogs.DeleteBlogRequest)(nil),           // 6: portfolio.blogs.DeleteBlogRequest
+	(*rss_feed.BatchGetRSSFeedsResponse)(nil), // 7: portfolio.blogs.BatchGetRSSFeedsResponse
+	(*rss_feed.GetRSSFeedResponse)(nil),       // 8: portfolio.blogs.GetRSSFeedResponse
+	(*blogs.BatchGetBlogsResponse)(nil),       // 9: portfolio.blogs.BatchGetBlogsResponse
+	(*blogs.GetBlogResponse)(nil),             // 10: portfolio.blogs.GetBlogResponse
 }
 var file_proto_api_proto_depIdxs = []int32{
-	0, // 0: portfolio.PortfolioBackendApi.CreateRSSFeed:input_type -> portfolio.blogs.CreateRSSFeedRequest
-	1, // 1: portfolio.PortfolioBackendApi.BatchGetRSSFeeds:input_type -> google.protobuf.Empty
-	2, // 2: portfolio.PortfolioBackendApi.GetRSSFeed:input_type -> portfolio.blogs.GetRSSFeedRequest
-	3, // 3: portfolio.PortfolioBackendApi.UpdateRSSFeed:input_type -> portfolio.blogs.UpdateRSSFeedRequest
-	4, // 4: portfolio.PortfolioBackendApi.DeleteRSSFeed:input_type -> portfolio.blogs.DeleteRSSFeedRequest
-	1, // 5: portfolio.PortfolioBackendApi.CreateRSSFeed:output_type -> google.protobuf.Empty
-	5, // 6: portfolio.PortfolioBackendApi.BatchGetRSSFeeds:output_type -> portfolio.blogs.BatchGetRSSFeedsResponse
-	6, // 7: portfolio.PortfolioBackendApi.GetRSSFeed:output_type -> portfolio.blogs.GetRSSFeedResponse
-	1, // 8: portfolio.PortfolioBackendApi.UpdateRSSFeed:output_type -> google.protobuf.Empty
-	1, // 9: portfolio.PortfolioBackendApi.DeleteRSSFeed:output_type -> google.protobuf.Empty
-	5, // [5:10] is the sub-list for method output_type
-	0, // [0:5] is the sub-list for method input_type
-	0, // [0:0] is the sub-list for extension type_name
-	0, // [0:0] is the sub-list for extension extendee
-	0, // [0:0] is the sub-list for field type_name
+	0,  // 0: portfolio.PortfolioBackendApi.CreateRSSFeed:input_type -> portfolio.blogs.CreateRSSFeedRequest
+	1,  // 1: portfolio.PortfolioBackendApi.BatchGetRSSFeeds:input_type -> google.protobuf.Empty
+	2,  // 2: portfolio.PortfolioBackendApi.GetRSSFeed:input_type -> portfolio.blogs.GetRSSFeedRequest
+	3,  // 3: portfolio.PortfolioBackendApi.DeleteRSSFeed:input_type -> portfolio.blogs.DeleteRSSFeedRequest
+	4,  // 4: portfolio.PortfolioBackendApi.CreateBlog:input_type -> portfolio.blogs.CreateBlogRequest
+	1,  // 5: portfolio.PortfolioBackendApi.BatchGetBlogs:input_type -> google.protobuf.Empty
+	5,  // 6: portfolio.PortfolioBackendApi.GetBlog:input_type -> portfolio.blogs.GetBlogRequest
+	6,  // 7: portfolio.PortfolioBackendApi.DeleteBlog:input_type -> portfolio.blogs.DeleteBlogRequest
+	1,  // 8: portfolio.PortfolioBackendApi.CreateRSSFeed:output_type -> google.protobuf.Empty
+	7,  // 9: portfolio.PortfolioBackendApi.BatchGetRSSFeeds:output_type -> portfolio.blogs.BatchGetRSSFeedsResponse
+	8,  // 10: portfolio.PortfolioBackendApi.GetRSSFeed:output_type -> portfolio.blogs.GetRSSFeedResponse
+	1,  // 11: portfolio.PortfolioBackendApi.DeleteRSSFeed:output_type -> google.protobuf.Empty
+	1,  // 12: portfolio.PortfolioBackendApi.CreateBlog:output_type -> google.protobuf.Empty
+	9,  // 13: portfolio.PortfolioBackendApi.BatchGetBlogs:output_type -> portfolio.blogs.BatchGetBlogsResponse
+	10, // 14: portfolio.PortfolioBackendApi.GetBlog:output_type -> portfolio.blogs.GetBlogResponse
+	1,  // 15: portfolio.PortfolioBackendApi.DeleteBlog:output_type -> google.protobuf.Empty
+	8,  // [8:16] is the sub-list for method output_type
+	0,  // [0:8] is the sub-list for method input_type
+	0,  // [0:0] is the sub-list for extension type_name
+	0,  // [0:0] is the sub-list for extension extendee
+	0,  // [0:0] is the sub-list for field type_name
 }
 
 func init() { file_proto_api_proto_init() }
